--- a/reading_group.Rmd
+++ b/reading_group.Rmd
@@ -102,6 +102,24 @@ Bautista, J.L., Yu, S. and Tian, L., 2021. Flavonoids in Cannabis sativa: Biosyn
 ### Fall 2022
 
 
+- 2022-11-17 
+
+- 2022-11-10 
+
+- 2022-11-03 Methods: Haplotype-phased genome and evolution of phytonutrient pathways of tetraploid blueberry
+https://doi.org/10.1093/gigascience/giz012
+
+
+- 2022-10-27 Haplotype-phased genome and evolution of phytonutrient pathways of tetraploid blueberry
+https://doi.org/10.1093/gigascience/giz012
+
+- 2022-10-20 Methods: Improved pea reference genome and pan-genome highlight genomic features and evolutionary characteristics
+https://doi.org/10.1038/s41588-022-01172-2
+
+
+- 2022-10-13 Improved pea reference genome and pan-genome highlight genomic features and evolutionary characteristics
+https://doi.org/10.1038/s41588-022-01172-2
+
 
 - 2022-10-06 Reading resources, how to find things to read    
 https://www.sciencenews.org/    
