added winter break 2022 to reading group

--- a/reading_group.Rmd
+++ b/reading_group.Rmd
@@ -104,6 +104,12 @@ Bautista, J.L., Yu, S. and Tian, L., 2021. Flavonoids in Cannabis sativa: Biosyn
 - 2023-01-12
 
 
+### Winter break 2022
+
+- 2022-12-15
+Chromosome-scale and haplotype-resolved genome assembly of a tetraploid potato cultivar
+https://doi.org/10.1038/s41588-022-01015-0
+
 
 ### Fall 2022
 
