--- a/docs/ViningLab.bib
+++ b/docs/ViningLab.bib
@@ -1,5 +1,18 @@
 
 
+@article{cheng2021haplotype,
+  title={Haplotype-resolved de novo assembly using phased assembly graphs with hifiasm},
+  author={Cheng, Haoyu and Concepcion, Gregory T and Feng, Xiaowen and Zhang, Haowen and Li, Heng},
+  journal={Nature methods},
+  volume={18},
+  number={2},
+  pages={170--175},
+  year={2021},
+  url={https://doi.org/10.1038/s41592-020-01056-5},
+  publisher={Nature Publishing Group US New York}
+}
+
+
 @article{grassa2021new,
   title={A new \textit{{C}annabis} genome assembly associates elevated cannabidiol ({CBD}) with hemp introgressed into marijuana},
   author={Grassa, Christopher J and Weiblen, George D and Wenger, Jonathan P and Dabney, Clemon and Poplawski, Shane G and Timothy Motley, S and Michael, Todd P and Schwartz, CJ},
