--- a/docs/denovo_assembly/denovo_assembly.Rmd
+++ b/docs/denovo_assembly/denovo_assembly.Rmd
@@ -4,7 +4,7 @@ date: "`r format(Sys.time(), '%Y, %B %d')`"
 output:
   html_document:
     toc: true
-    toc_depth: 2
+    toc_depth: 3
     code_folding: hide
 editor_options: 
   chunk_output_type: console
@@ -92,19 +92,49 @@ These properties may include the following.
 
 
 ```{r, echo=FALSE, fig.align='center', fig.cap="**Figure 1.** Summary of a FASTQ library.", out.width = '50%'}
-knitr::include_graphics("PacBioRice_library.png")
+#knitr::include_graphics("PacBioRice_library.png")
 ```
 
 
 
+### Sequenced read length histogram
 
 
+```{r, fig.align='center', fig.cap="**Figure 1.** Summary of a FASTQ library.", fig.height=3, fig.width=5}
+my_reads <- read.csv("m64013e_210227_222017.hifi_reads_nuccomp.csv.gz")
+# my_reads[1:3, 1:2]
+
+library(ggplot2)
+
+my_binwidth = 1
+p <- ggplot( data = my_reads, mapping = aes( x = Length/1e3) )
+#p <- p + geom_histogram( binwidth = 1, color="black", fill="#3CB371" )
+#p <- p + geom_density(alpha=.2, fill="#FF6666")
+#p <- p + geom_histogram( binwidth = 1, color="black", fill="#3CB371" )
+#p <- p + geom_density(alpha=.2, fill="#FF6666")
+# p <- p + geom_density( aes( y = ..density.. * (nrow(my_reads) * my_binwidth) ),
+#                        colour="black", fill="#C0C0C000", linewidth = 1.4)
+p <- p + geom_histogram( color="black", fill="#3CB371", binwidth = my_binwidth )
+# p <- p + geom_density( aes( y = after_stat(density) * (nrow(my_reads) * my_binwidth) ),
+#                        colour="#808080", fill="#C0C0C000", 
+#                        linewidth = 1.4, linetype = "solid")
+p <- p + theme_bw()
+p <- p + xlab( "Length (Kbp)" )
+p <- p + ylab( "Number of reads" )
+p
+```
 
 
+A histogram is a versatile tool to visualize the length distribution of sequences.
+Here we see that we have sequence lengths (the x-axis) that range from near zero to almost 50 Kbp.
+The more abundant sequences range from around 10 to 35 Kbp, with 17 Kbp being the most common or abundant length of sequence.
+In order to determine if this is a 'good' distribution we may compare it to product literature, or we may want to compare it to a collection of other libraries.
+Once we know the distribution of sequence lengths we can determine if we should proceed to assembly or if we may need to attempt to mitigate our library somehow.
 
 
 
 ## Running hifiasm
+
 
 ```
 hifiasm -o myassembly_hifiasm -t 16 --n-hap 2 ../m64013e_210227_222017.hifi_reads.fastq.gz
@@ -117,18 +147,45 @@ Options include the following.
 --n-hap      INT number of haplotypes [2]    
 
 
+The software 'hifiasm' used on Pacific Bioscience's 'hifi' reads is a current best practice for genome assembly.
+Sequence reads that were produced using PacBio's 'hifi' technology are provided in the FASTQ format are assembled using this software in less than 24 hours.
+
+
+- [hifiasm on GitHub](https://github.com/chhylp123/hifiasm)
+- [hifiasm on Read the Docs](https://hifiasm.readthedocs.io/en/latest/index.html)
+- @cheng2021haplotype
+- [Pacific-Biosciences-Glossary-of-Terms](https://www.pacb.com/wp-content/uploads/2015/09/Pacific-Biosciences-Glossary-of-Terms.pdf)
+
+
+## GenomeScope
+
+
+```{r, echo=FALSE, fig.align='center', fig.cap="**Figure 2.** GenomeScope histogram.", out.width = '50%'}
+knitr::include_graphics("transformed_linear_plot.png")
+```
+
+
+The distribution of k-mers, subsets of the observed reads to a standard length (such as 31 bp) can be informative on the sequence depth for homozygous regions of an assembly, as well as other inferences.
+GenomeScope presents itself as a 'reference free' method because it uses a sequence library and not the assembly made from the library.
+It requires preprocessing of the input sequences with a k-mer counting software, such as JellyFish.
+Because hifiasm does produce a k-mer histogram in it's standard error it might be useful to see this as a step to explore after hifiasm assembly also.
+The histogram produced by GenomeScope typically consists of a major peak that indicates the sequence depth of the homozygous fraction of the assembly.
+Minor peaks corresponding to heterozygous regions are typically present as well, in genomes where heterozygosity is expected.
+
+
+- [Jellyfish](https://genome.umd.edu/jellyfish.html#Release) mer counter
+- [GenomeScope](http://qb.cshl.edu/genomescope/genomescope2.0/)
+
 
 ## Evaluating Assemblies
 
 
-```{r, echo=FALSE, fig.align='center', fig.cap="**Figure 2.** Summary of a FASTA file.", out.width = '70%'}
+```{r, echo=FALSE, fig.align='center', fig.cap="**Figure 3.** Summary of the CBDRx assembly (FASTA file).", out.width = '70%'}
 knitr::include_graphics("cbdrx_nuccomp.png")
 ```
 
 
 ## BUSCO
-
-Benchmarking Universal Single-Copy Orthologue ([BUSCO](https://busco.ezlab.org/)).
 
 
 ```
@@ -149,11 +206,27 @@ Benchmarking Universal Single-Copy Orthologue ([BUSCO](https://busco.ezlab.org/)
         2326    Total BUSCO groups searched 
 ```
 
+Benchmarking Universal Single-Copy Orthologue.
+
+- [BUSCO](https://busco.ezlab.org/) at EZlab
 
 
-## Links
+
+## Dotplots
+
+
+```{r, echo=FALSE, fig.align='center', fig.cap="**Figure 4.** Dotplot comparing the CBDRx and Finola assemblies (FASTA files).", out.width = '70%'}
+knitr::include_graphics("CBDRx_rmmask_Finola_rmmask.plot.png")
+```
+
+
+- [D-Genies](https://dgenies.toulouse.inra.fr/)
+- [pafr](https://cran.r-project.org/web/packages/pafr/index.html)
+- [dotPlotly](https://github.com/tpoorten/dotPlotly)
 
 
 
+
+## References
 
 
