--- a/reading_group.Rmd
+++ b/reading_group.Rmd
@@ -115,8 +115,7 @@ cat(
 - 2023-11-07
 Regularized multi-trait multi-locus linear mixed models for genome-wide association studies and genomic selection in crops
 Aurélie C. Lozano1, Hantian Ding2, Naoki Abe1 and Alexander E. Lipka3*
-BMC Bioinformatics
-(2023) 24:399
+BMC Bioinformatics (2023) 24:399
 https://doi.org/10.1186/s12859-023-05519-2
 
 
