--- a/reading_group.Rmd
+++ b/reading_group.Rmd
@@ -110,6 +110,37 @@ cat(
 ```
 
 
+### Summer 2024
+
+
+
+### Spring 2024
+
+- 2024-06-18
+Xiaoya Shi, Shuo Cao, Xu Wang, Siyang Huang, Yue Wang, Zhongjie Liu, Wenwen Liu, Xiangpeng Leng, Yanling Peng, Nan Wang, Yiwen Wang, Zhiyao Ma, Xiaodong Xu, Fan Zhang, Hui Xue, Haixia Zhong, Yi Wang, Kekun Zhang, Amandine Velt, Komlan Avia, Daniela Holtgräwe, Jérôme Grimplet, José Tomás Matus, Doreen Ware, Xinyu Wu, Haibo Wang, Chonghuai Liu, Yuling Fang, Camille Rustenholz, Zongming Cheng, Hua Xiao, Yongfeng Zhou, The complete reference genome for grapevine (Vitis vinifera L.) genetics and breeding, Horticulture Research, Volume 10, Issue 5, May 2023, uhad061, https://doi.org/10.1093/hr/uhad061
+
+
+- 2024-06-04
+Pedersen, G.B., Blaschek, L., Frandsen, K.E., Noack, L.C. and Persson, S., 2023. Cellulose synthesis in land plants. Molecular Plant, 16(1), pp.206-231.
+
+- 2024-5-21
+Nix, J., Ranney, T. G., Lynch, N. P., and Chen, H. (2024). Flow Cytometry for Estimating Plant Genome Size: Revisiting Assumptions, Sources of Variation, Reference Standards, and Best Practices. J. Amer. Soc. Hort. Sci. 149, 3, 131-141, available from: https://doi.org/10.21273/JASHS05376-24
+
+- 2024-5-14
+Chakraborty, S., Dutta, S. and Das, M., 2023. Genetics behind sexual incompatibility in plants: How much we know and what more to uncover?. Journal of Plant Growth Regulation, 42(11), pp.7164-7188.
+
+- 2024-4-09
+Davey, J.W., Hohenlohe, P.A., Etter, P.D., Boone, J.Q., Catchen, J.M. and Blaxter, M.L., 2011. Genome-wide genetic marker discovery and genotyping using next-generation sequencing. Nature Reviews Genetics, 12(7), pp.499-510.
+
+
+### Winter 2024
+
+- 2024-3-12
+https://bioconductor.org/packages/release/bioc/html/flowCore.html
+
+- 2024-3-05
+Wang, H., Ren, J., Zhou, S., Duan, Y., Zhu, C., Chen, C., Liu, Z., Zheng, Q., Xiang, S., Xie, Z. and Wang, X., 2024. Molecular regulation of oil gland development and biosynthesis of essential oils in Citrus spp. Science, 383(6683), pp.659-666.
+
 ### Fall 2023
 
 - 2023-11-14
