--- a/reading_group.Rmd
+++ b/reading_group.Rmd
@@ -116,6 +116,17 @@ cat(
 ### Fall 2024
 
 
+- 2024-12-04
+
+
+- 2024-11-20
+
+
+- 2024-11-20
+Adal, A.M., Doshi, K., Holbrook, L. et al. Comparative RNA-Seq analysis reveals genes associated with masculinization in female Cannabis sativa. Planta 253, 17 (2021). 
+https://doi.org/10.1007/s00425-020-03522-y
+
+
 - 2024-11-13
 Stefan Kusch, Lina Pesch, Ralph Panstruga, 
 Comprehensive Phylogenetic Analysis Sheds Light on the Diversity and Origin of the MLO Family of Integral Membrane Proteins, 
